# actix-web-starter-project

./: .env.example  Cargo.toml  README.md
migrations/2022-12-11-130102_create_user/: up.sql
src/: api_error.rs  db.rs  main.rs  schema.rs
src/user/: mod.rs  model.rs  routes.rs
